# netbox-services

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  todo.json
netbox_services/: __init__.py  choices.py  filtersets.py  forms.py  models.py  navigation.py  signals.py  tables.py  urls.py  views.py
netbox_services/api/: serializers.py  urls.py  views.py
netbox_services/migrations/: 0001_initial.py  0002_integration_params.py  0003_config_params.py  0004_extensions.py  0005_host_roles.py  0006_rotation_policy.py
netbox_services/tests/: test_api.py  test_filtersets.py  test_models.py  utils.py
